--- a/playbook-learning-app-ecomerce.yaml
+++ b/playbook-learning-app-ecomerce.yaml
@@ -23,12 +23,10 @@
         name: mariadb-server
         state: present
     - name: Configure mariadb service
-      become: true
       service:
         name: mariadb
         state: started
     - name: Configure mariadb startup
-      become: true
       systemd:
         name: mariadb
         enabled: yes
@@ -41,10 +39,13 @@
         immediate: yes
         state: enabled
     - name: Make sure pymysql is present
-      become: true
       pip:
         name: pymysql
         state: present
+    - name: Add database script to sit erver
+      copy:
+        src: /home/jonatan/Escritorio/learn-ansible/test_project/project/db-load-script.sql
+        dest: /home/osboxes/db-load-script.sql
     - name: Create database ecomdb
       community.mysql.mysql_db:
         login_user: root
@@ -58,10 +59,6 @@
         priv: '*.*:ALL'
         host: '{{ hostvars["webserver"].ansible_host }}'
         state: present
-    - name: Add database script to server
-      copy:
-        src: /home/jonatan/Escritorio/learn-ansible/test_project/project/db-load-script.sql
-        dest: /home/osboxes/db-load-script.sql
     - name: Load script to database
       community.mysql.mysql_db:
         login_user: root
@@ -70,23 +67,17 @@
         target: /home/osboxes/db-load-script.sql
         state: import
         force: yes
-- name: Deploy and configure web
+- name: Deploy and configure web server
   hosts: webserver
   tasks:
-    - name: Install httpd
+    - name: Install required packages
       become: true
       yum:
-        name: httpd
-        state: present
-    - name: Install php
-      become: true
-      yum:
-        name: php
-        state: present        
-    - name: Install php-mysql
-      become: true
-      yum:
-        name: php-mysqlnd
+        name: 
+          - httpd
+          - php
+          - php-mysqlnd
+          - git
         state: present
     - name: Configure httpd firewall rules and reload to apply
       become: true
@@ -97,18 +88,15 @@
         immediate: yes
         state: enabled
     - name: Replace index.html with index.php
-      become: true
       replace:
         path: /etc/httpd/conf/httpd.conf
         regexp: 'index.html'
         replace: 'index.php'
     - name: Configure httpd service
-      become: true
       service:
         name: httpd
         state: started
     - name: Configure httpd startup
-      become: true
       systemd:
         name: httpd
         enabled: yes
@@ -117,31 +105,17 @@
       ansible.posix.seboolean:
         name: httpd_can_network_connect_db
         state: yes
-- name: Deploy and configure git
+- name: Clone and configure application
   hosts: webserver
-  tasks:
-    - name: Install git
-      become: true
-      yum:
-        name: git
-        state: present
-- name: Clone project
-  hosts: webserver
+  become: true
   tasks:
     - name: Clone repository
-      become: true
       git:
         repo: https://github.com/JRuedas/learning-app-ecommerce
         dest: /var/www/html/
         force: yes 
     - name: Replace IP with database IP in index.php
-      become: true
       replace:
         path: /var/www/html/index.php
         regexp: '172.20.1.101'
         replace: '{{ hostvars["dbserver"].ansible_host }}'
-    - name: Restart httpd service
-      become: true
-      service:
-        name: httpd
-        state: restarted
